--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
-  <head>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  </head>
-  <body>
-    <div id="photo"></div>
-    <script src="bundle.js"></script>
-  </body>
+
+<head>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <!-- <link rel="stylesheet" type="text/css" href="public/style.css"> -->
+</head>
+
+<body>
+  <div id="photo"></div>
+  <script src="bundle.js"></script>
+</body>
+
 </html>
