--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <div id="photo"></div>
+  
+  <section class="gallery-container"></section>
+ 
   <script src="bundle.js"></script>
 </body>
 
