For Han to review

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,12 @@
 <html>
 
 <head>
-  <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Photo Module</title>	
+ <!--  <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 <body>
-  
-  <section class="gallery-container"></section>
- 
+  <div id="gallery-container"></div>
   <script src="bundle.js"></script>
 </body>
 
